09. semester/MlaskalCompiler/public-rw/SWI098/du3/du3g.output
Nonterminals useless in grammar

   label
   expr
   simple_expr
   term
   factor
   const
   literal
   ord_const


Terminals unused in grammar

   DUTOK_LABEL
   DUTOK_CONST
   DUTOK_TYPE
   DUTOK_VAR
   DUTOK_BEGIN
   DUTOK_END
   DUTOK_PROCEDURE
   DUTOK_FUNCTION
   DUTOK_ARRAY
   DUTOK_OF
   DUTOK_GOTO
   DUTOK_IF
   DUTOK_THEN
   DUTOK_ELSE
   DUTOK_WHILE
   DUTOK_DO
   DUTOK_REPEAT
   DUTOK_UNTIL
   DUTOK_FOR
   DUTOK_OR
   DUTOK_NOT
   DUTOK_RECORD
   DUTOK_UINT
   DUTOK_REAL
   DUTOK_STRING
   DUTOK_COMMA
   DUTOK_EQ
   DUTOK_COLON
   DUTOK_LPAR
   DUTOK_RPAR
   DUTOK_DOTDOT
   DUTOK_LSBRA
   DUTOK_RSBRA
   DUTOK_ASSIGN
   DUTOK_OPER_REL
   DUTOK_OPER_SIGNADD
   DUTOK_OPER_MUL
   DUTOK_FOR_DIRECTION


Rules useless in grammar

    3 label: /* empty */

    4 expr: /* empty */

    5 simple_expr: /* empty */

    6 term: /* empty */

    7 factor: /* empty */

    8 const: /* empty */
    9      | literal
   10      | DUTOK_OPER_SIGNADD DUTOK_UINT
   11      | DUTOK_OPER_SIGNADD DUTOK_REAL

   12 literal: /* empty */
   13        | DUTOK_IDENTIFIER
   14        | DUTOK_UINT
   15        | DUTOK_REAL
   16        | DUTOK_STRING

   17 ord_const: /* empty */
   18          | DUTOK_IDENTIFIER
   19          | DUTOK_OPER_SIGNADD DUTOK_IDENTIFIER
   20          | DUTOK_OPER_SIGNADD DUTOK_UINT


Grammar

    0 $accept: mlaskal $end

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    2 program_block: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
DUTOK_PROGRAM (258) 1
DUTOK_LABEL (259)
DUTOK_CONST (260)
DUTOK_TYPE (261)
DUTOK_VAR (262)
DUTOK_BEGIN (263)
DUTOK_END (264)
DUTOK_PROCEDURE (265)
DUTOK_FUNCTION (266)
DUTOK_ARRAY (267)
DUTOK_OF (268)
DUTOK_GOTO (269)
DUTOK_IF (270)
DUTOK_THEN (271)
DUTOK_ELSE (272)
DUTOK_WHILE (273)
DUTOK_DO (274)
DUTOK_REPEAT (275)
DUTOK_UNTIL (276)
DUTOK_FOR (277)
DUTOK_OR (278)
DUTOK_NOT (279)
DUTOK_RECORD (280)
DUTOK_IDENTIFIER (281) 1
DUTOK_UINT (282)
DUTOK_REAL (283)
DUTOK_STRING (284)
DUTOK_SEMICOLON (285) 1
DUTOK_DOT (286) 1
DUTOK_COMMA (287)
DUTOK_EQ (288)
DUTOK_COLON (289)
DUTOK_LPAR (290)
DUTOK_RPAR (291)
DUTOK_DOTDOT (292)
DUTOK_LSBRA (293)
DUTOK_RSBRA (294)
DUTOK_ASSIGN (295)
DUTOK_OPER_REL (296)
DUTOK_OPER_SIGNADD (297)
DUTOK_OPER_MUL (298)
DUTOK_FOR_DIRECTION (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
mlaskal (46)
    on left: 1, on right: 0
program_block (47)
    on left: 2, on right: 1


state 0

    0 $accept: . mlaskal $end
    1 mlaskal: . DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_PROGRAM  shift, and go to state 1

    mlaskal  go to state 2


state 1

    1 mlaskal: DUTOK_PROGRAM . DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: mlaskal . $end

    $end  shift, and go to state 4


state 3

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER . DUTOK_SEMICOLON program_block DUTOK_DOT

    DUTOK_SEMICOLON  shift, and go to state 5


state 4

    0 $accept: mlaskal $end .

    $default  accept


state 5

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON . program_block DUTOK_DOT
    2 program_block: .

    $default  reduce using rule 2 (program_block)

    program_block  go to state 6


state 6

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block . DUTOK_DOT

    DUTOK_DOT  shift, and go to state 7


state 7

    1 mlaskal: DUTOK_PROGRAM DUTOK_IDENTIFIER DUTOK_SEMICOLON program_block DUTOK_DOT .

    $default  reduce using rule 1 (mlaskal)
